# chitrank_crew

./: .gitignore  README.md  pyproject.toml  report.md
src/chitrank_crew/: crew.py  main.py  setup_rag.py
src/chitrank_crew/config/: agents.yaml  tasks.yaml
src/chitrank_crew/tools/: custom_tool.py
src/knowledge/: short_term.sqlite
src/knowledge/memory/: DevOps.jsonl  manager.jsonl  software_engineer.jsonl
src/knowledge/vector_store/105f98b7-e4a9-412c-ac50-387f3888483f/: index_metadata.pickle
src/mcp_servers/: __init__.py  crew_memory_server.py
